Archive2/c9/1d31b3998eaf51/output
main.cpp: In instantiation of 'void sort(ContainerType&) [with ContainerType = B]':
main.cpp:39:16:   required from here
main.cpp:18:5: error: static assertion failed: Invalid container type
     static_assert(has_begin<ContainerType>{} && has_end<ContainerType>{}, "Invalid container type");
     ^
